# Text2Pic-Final

./: .gitignore  .pylintrc  Makefile  README.md  main.py  pyproject.toml  tfg.yaml  training_log.txt
.github/workflows/: app.yml
data/: .gitignore
docs/: communication.md  dependency_manager.md  milestones.md  runtime.md  task_runner.md
src/: handler.py  server.py  utils.py
src/images/: builders.py  dataset.py  run.py  text_process.py  training.py  verifications.py
src/nums/: builders.py  cgan.py  dataset.py  drawing.py  training.py
tests/: test_handler.py  test_server.py
